--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
+    "start-multiple": "node app-multiple-account.js",
+    "start-multiple:dev": "nodemon app-multiple-account.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
