--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Nur Muhammad",
   "license": "MIT",
   "dependencies": {
+    "@codechat/base": "github:code-chat-br/codechat",
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
